# blackboxd

./: .gitignore  README.md  pyproject.toml
examples/: fastapi_app.py  generic_io_pipeline.py  httpx_transport_pattern.py  local_script.py  monkey_patch_pattern.py  openai_instrument_existing_client.py  replay_queries.sql  supabase_setup.py
src/blackboxd/: __init__.py  capture.py  config.py  context.py  decorators.py  httpx.py  instrumentation.py  io.py  models.py  serialization.py  span.py
src/blackboxd/providers/: __init__.py  anthropic.py  openai.py
src/blackboxd/storage/: __init__.py  base.py  jsonl.py  postgres.py  supabase.py
tests/: test_instrumentation_patterns.py  test_trace_jsonl.py
typescript/: README.md  package.json  tsconfig.json
typescript/examples/: local-script.ts  supabase-setup.ts
typescript/src/: capture.ts  config.ts  context.ts  index.ts  serialization.ts  span.ts  types.ts  utils.ts
typescript/src/providers/: anthropic.ts  openai.ts
typescript/src/storage/: base.ts  jsonl.ts  supabase.ts
typescript/tests/: trace.test.ts
